<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BDude</string>

    <string name="help_please_btn">עזרה בבקשה</string>
    <string name="no_request_data">אין בקשות להציג בסביבתך</string>
    <string name="my_request_title">הבקשות שלי</string>
    <string name="no_my_request_data">אין לך בקשות לעזרה, אם ברצונך לבקש עזרה לחץ על הוספת בקשה חדשה</string>
    <string name="show_phone">הצג מספר טלפון</string>
    <string name="call_to_number">חייג למספר</string>
    <string name="share_info">TODO טקסט לשיתוף + קישור לגוגל פליי</string>
    <string name="i_need_help_with">צריך עזרה עם:</string>
    <string name="need_help_with">כותרת:</string>
    <string name="my_location_is">המיקום שלי:</string>

    <string name="health_warning">כדי שנצליח לעזור אחד לשני בצורה נכונה חשוב לעקוב אחרי הכללים</string>
    <string name="health_terms_link">כללי בטיחות של משרד הבריאות</string>
    <string name="share_this_app">לשתף את האפליקציה עם חברים</string>

    <string name="my_requests">הבקשות שלי:</string>
    <string name="personal_details">פרטים אישיים:</string>
    <string name="notes_to_improve">הערות לנו לשיפור:</string>

    <string name="approve">אישור</string>
    <string name="terms_of_use">תנאי שימוש</string>
    <string name="send_request">שלח בקשה</string>
    <string name="more_details">פרטים נוספים:</string>
    <string name="enter_phone_number">טלפון:</string>
    <string name="hello">שלום</string>
    <string name="help_please_btn_new">בקשה חדשה</string>
    <string name="ask_for_location_permission_title">בקשת מיקום</string>
    <string name="ask_for_location_permission_message">בבקשה אשר שימוש במיקומך על מנת שנמצא את הבקשות לעזרה הקרובות אלייך.</string>
    <string name="ask_for_location_gps_open_btn">פתח gps</string>
    <string name="ask_for_location_gps_message">עלייך לפתוח את gps בהגדרות המכשיר בכדי שנוכל לחפש בקשות קרובות אלייך</string>
    <string name="ask_for_location_gps_title">פתיחת gps</string>
    <string name="hint_enter_location">נא להכניס מיקום</string>
    <string name="hint_help_with">במילה או שתיים..</string>
    <string name="details_edit_text">קצת יותר פרטים</string>
    <string name="send_whatsapp">שלח וואטסאפ</string>
    <string name="check_the_number">בדוק שנית את המספר שהוכנס</string>
    <string name="enter_name">שם:</string>
    <string name="enter_name_hint">נא להכניס שם</string>

    <string name="you_cont_ask_more_five_requests">אינך יכול לפרסם יותר מ 5 בקשות</string>

    <string name="km"> ק\"מ</string>
    <string name="recently_published">פורסם לאחרונה</string>
    <string name="publish_time">לפני </string>
    <string name="hours_ago">ש\'</string>

    <string name="leku_title_activity_location_picker">בחירת מיקום</string>
    <string name="leku_load_location_error">משהו לא עבד, נא נסה שנית.</string>
    <string name="leku_no_search_results">אין תוצאות לחיפוש</string>
    <string name="leku_unknown_location">מיקום לא ידוע</string>
    <string name="leku_voice_search_promp">חיפוש בקול…</string>
    <string name="leku_voice_search_extra_language">he-HE</string>
    <string name="leku_toolbar_action_voice_title">קול</string>
    <string name="leku_search_hint">חיפוש</string>
    <string name="leku_longitude">קו אורך</string>
    <string name="leku_latitude">קו רוחב</string>
    <string name="leku_coordinates">קואורדינטות</string>
    <string name="leku_no_geocoder_available">השירות לא זמין</string>
    <string name="leku_network_resource">אינטרנט</string>

    <string name="delete_item_text">האם ברצונך למחוק את הבקשה?</string>
    <string name="delete">מחק</string>
    <string name="pay_attention_please">לתשומת לבך</string>

    <string name="facebook_login">להיכנס עם פייסבוק</string>
    <string name="google_login">להיכנס עם גוגל</string>

    <string name="ty_very_match">כל הכבוד וממש תודה!</string>
    <string name="age_at_risk">גיל בסיכון</string>
    <string name="approve_your_location_text">כדי שתדעו מי לידכם או שתוכלו לבקש עזרה מאנשים באזורכם תאשרו שנדע את המיקום שלכם</string>
    <string name="one_moment_before_start">רגע לפני שמתחילים</string>
    <string name="good_to_me">יאללה מתאים</string>
    <string name="lets_go">בואו נתחיל</string>
    <string name="ok">אוקיי</string>
    <string name="lets_help_people">בואו נעזור לשכנים או כמובן לבקש עזרה אם הושפעתם</string>
    <string name="welcome">ברוכים הבאים!</string>
    <string name="link_health_terms">ברוכים הבאים!</string>
    <string name="important_to_save_terms">חשוב לשמור על כללי הבטיחות</string>
    <string name="days_ago">ימ\'</string>
    <string name="add_comment">תרצו להשאיר הערה?</string>
    <string name="phone_number">מספר טלפון:</string>
    <string name="help_with">עזרה עם:</string>
    <string name="i_will_help">אני רוצה לעזור</string>
    <string name="in_isolation">בבידוד</string>
    <string name="distance_from_me">מרחק ממני:</string>
    <string name="sent_in">נשלח ב:</string>
    <string name="comments">הערות:</string>
    <string name="refund_back">צורת החזר:</string>
    <string name="summary_request_title">סיכום הבקשה שלך</string>
    <string name="send_request_summary">סכם בקשה</string>
    <string name="add_item">הוסף לבקשה</string>
    <string name="x">x</string>
    <string name="private_details_title">פרטיים אישיים:</string>
    <string name="number">מספר</string>
    <string name="select_location">תבחר מיקום</string>
    <string name="free_search">הקלד כאן בטקסט חופשי</string>
    <string name="phone_regex">^(0)[23489]{1}[0-9]{7}$|^(05)[0-9]{8}$</string>
    <string name="location">מיקום:</string>
    <string name="close">סגור</string>
    <string name="exit_app">האם ברצונך לצאת מהאפליקציה?</string>
    <string name="yes">כן</string>

    <string name="facebook_app_id">1295107550685494</string>
    <string name="fb_login_protocol_scheme">fb1295107550685494</string>
    <string name="ask_help_with">ביקשתי עזרה עם:</string>
    <string name="personal_info">האיזור האישי</string>
    <string name="add_address">הכנס כתובת</string>
    <string name="add_name">הכנס שם</string>
    <string name="add_phone_number">הכנס מספר טלפון</string>
    <string name="write_us_here_hint">כתוב לנו כאן</string>
    <string name="help_to_title">עזרתי ל:</string>
    <string name="send_us_mail_btn">שלח משוב</string>
    <string name="request_detail_title">פרטי הבקשה</string>
    <string name="close_ticket">סגור כרטיס</string>
    <string name="i_need_help_with_tag">* הקלד בקצרה במה אתה צריך עזרה והוסף לבקשה.\nלדוגמא: קניות, אוכל, תרופות, חלב..</string>
    <string name="new_request_title">יצירת בקשה חדשה</string>
    <string name="emergency_title_tag">* סמן אם הנך בבידוד, גיל בסיכון או חולה.\n* זהו אינו שדה חובה.</string>
    <string name="payback_title_tag">* חובה לבחור את צורת ההחזר למי שיעזור לך</string>
    <string name="phone_number_to_send_you">מספר הטלפון שיצרו עמך קשר:</string>
    <string name="user_cont_add_more_then_20">לא ניתן להוסיף יותר מ- 20 פריטים</string>
    <string name="good_to_know">טוב לדעת</string>
    <string name="login_title">צריך שתיכנסו למטרות אבטחה</string>
    <string name="login_sub_text">אין לנו שום צורך ורצון להשתמש במידע שלכם ומבטיחים לא לעשות שום שימוש במידע לגורמים חיצוניים. המידע ישמש למטרות אבטחה בלבד.</string>

</resources>
