<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textDirection="anyRtl"
    android:animateLayoutChanges="true"
    android:background="#FFFFFF">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/new_request_title"
                android:textColor="@color/colorBlack"
                android:textDirection="anyRtl"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/more_details_editT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_shape"
                android:gravity="top"
                android:inputType="text|textMultiLine|textCapSentences"
                android:lines="3"
                android:maxLength="200"
                android:maxLines="3"
                android:padding="16dp"
                android:layout_marginBottom="32dp"
                android:textColor="@color/colorDark"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textDirection="anyRtl"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/note_title" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/need_help_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/need_help_title"
                app:layout_constraintTop_toTopOf="@+id/need_help_title"
                app:srcCompat="@drawable/ic_exclamation_mark" />


            <TextView
                android:id="@+id/add_chip_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/btn_selector"
                android:enabled="false"
                android:paddingStart="12dp"
                android:paddingTop="8dp"
                android:paddingEnd="12dp"
                android:paddingBottom="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/add_item"
                android:textColor="@drawable/btn_text_selector"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/counter_view" />

            <TextView
                android:id="@+id/user_info_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/private_details_title"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorDark"
                android:textDirection="anyRtl"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"/>

            <TextView
                android:id="@+id/need_help_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="@string/i_need_help_with"
                android:textColor="@color/colorDark"
                android:textDirection="anyRtl"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_info_separator" />

            <TextView
                android:id="@+id/need_help_title_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:text="@string/i_need_help_with_tag"
                android:textColor="@color/colorDark"
                android:textDirection="anyRtl"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/need_help_title" />

            <TextView
                android:id="@+id/emergency_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="דחיפות:"
                android:textColor="@color/colorDark"
                android:textDirection="anyRtl"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emergency_separator" />

            <TextView
                android:id="@+id/emergency_title_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:text="@string/emergency_title_tag"
                android:textColor="@color/colorDark"
                android:textDirection="anyRtl"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emergency_title" />

            <TextView
                android:id="@+id/payback_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="צורת החזר:"
                android:textColor="@color/colorDark"
                android:textDirection="anyRtl"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/payback_separator" />

            <TextView
                android:id="@+id/payback_title_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:text="@string/payback_title_tag"
                android:textColor="@color/colorDark"
                android:textDirection="anyRtl"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/payback_title" />

            <TextView
                android:id="@+id/note_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center_vertical"
                android:text="@string/add_comment"
                android:textColor="@color/colorDark"
                android:textDirection="anyRtl"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/note_separator" />

            <View
                android:id="@+id/user_info_separator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/my_location" />

            <View
                android:id="@+id/emergency_separator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chips_group" />

            <View
                android:id="@+id/payback_separator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emergency_recycler" />

            <View
                android:id="@+id/note_separator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pay_chooser_recycler" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/emergency_recycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layoutDirection="rtl"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emergency_title_tag"
                tools:itemCount="3"
                tools:listitem="@layout/item_category_list" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pay_chooser_recycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layoutDirection="rtl"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/payback_title_tag"
                tools:itemCount="3"
                tools:listitem="@layout/item_category_list" />


            <com.edudb.bdude.general.CheckedEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="שם"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_info_title"
                app:required="true" />


            <com.edudb.bdude.general.CheckedEditText
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/number"
                android:inputType="phone"
                app:maxLength="10"
                app:regex="@string/phone_regex"
                app:drawable_start="@drawable/ic_user_phone_edittext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <com.edudb.bdude.general.CheckedEditText
                android:id="@+id/my_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:edit="false"
                android:hint="@string/select_location"
                android:inputType="text"
                app:drawable_start="@drawable/ic_user_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone" />

            <com.edudb.bdude.general.CheckedEditText
                android:id="@+id/search_items"
                android:layout_width="0dp"
                app:maxLength="20"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/free_search"
                android:inputType="text"
                app:drawable_start="@drawable/ic_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/need_help_title_tag" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chips_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layoutDirection="rtl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_chip_item" />

            <include
                android:id="@+id/counter_view"
                layout="@layout/chip_item_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_items" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>